# WhatsVUpp_V99

./: README.md  alert.rules.yml  alertmanager.yml  ci-cd.yml  docker-compose.yaml  prometheus.yml
.github/workflows/: deploy.yaml  deploy.yml
backend-go/: Dockerfile  auth.go  auth_test.go  go.mod  go.sum  main.go
backend-rust/: Cargo.toml  Dockerfile
backend-rust/src/: main.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/pages/: ChatPage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/utils/: AuthRedirect.tsx
k8s/: app.yaml  backend-go-deployment.yaml  backend-go-monitor.yaml  backend-go-service.yaml  backend-rust-deployment.yaml  backend-rust-monitor.yaml  backend-rust-service.yaml  deployer-rbac.yaml  frontend-deployment.yaml  grafana-values.yaml  ingress.yaml  service-monitor.yaml
k8s/monitoring/: rules-basic.yaml  values-monitoring.yaml
