[package]
name = "backend-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend-rust"
path = "src/main.rs"

[dependencies]
aes = "0.7"
block-modes = "0.8.1"
hex-literal = "0.3"
actix-web = "4"
actix-cors="0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
prometheus = { version = "0.13", features = ["process"] }